deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spc-deployment2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spc
  template:
    metadata:
      labels:
        app: spc
        env: dev
    spec:
      containers:
        - name: spc-container-3
          image: "${DJANGO_IMAGE3}"  # Use environment variable reference
          ports:
            - containerPort: 9001
          volumeMounts:
            - mountPath: "/app/data"
              name: django-storage
      volumes:
        - name: django-storage
          persistentVolumeClaim:
            claimName: django-pvc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
