service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spc-svc2
spec:
  selector:
    app: spc
  ports:
    - name: http-9001
      port: 9001
      targetPort: 9001
      protocol: TCP
