ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecomm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /demo-1
            pathType: Prefix
            backend:
              service:
                name: spc-svc1
                port:
                  number: 8000
          - path: /demo-2
            pathType: Prefix
            backend:
              service:
                name: spc-svc1
                port:
                  number: 9000
          - path: /demo-3
            pathType: Prefix
            backend:
              service:
                name: spc-svc2
                port:
                  number: 9001
